# Ernie

./: .gitignore  README.md  SOUL.md  pyproject.toml
docs/: ERNIE_PLAN.md  GITHUB_LINUX_SETUP.md
memory_agent/: __init__.py  action_contract.py  agent.py  cli.py  cockpit.py  config.py  entity_resolution.py  evaluation.py  executor.py  extractors.py  file_adapter.py  improvement.py  linux_runtime.py  memory.py  migration.py  model_adapter.py  models.py  patch_runner.py  planner.py  python_runtime.py  reflection.py  reranker.py  service_manager.py  shell_adapter.py  soul.py
scripts/: bootstrap_linux.sh  install_desktop_launcher.sh  install_remote_service.sh  install_user_service.sh  manage_remote_access.sh  run_cockpit.sh
tests/: test_memory.py
