[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-first-agent"
version = "0.1.0"
description = "A local agent scaffold with a memory-first architecture."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
memory-agent = "memory_agent.cli:main"

[tool.setuptools.packages.find]
include = ["memory_agent*"]
